--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <title>Типи підключення — Borovko Connection</title>
  <!-- Шрифт Inter -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="style.css">
   <script src="https://unpkg.com/lucide@latest"></script>
 
 </head>
