--- a/cabinet.html
+++ b/cabinet.html
@@ -6,7 +6,7 @@
   <title>Особистий кабінет — Borovko Connection</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="style.css">
   <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
